# Project_Reborn_System

./: .editorconfig  .env.example  .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  README.md  ROADMAP.md  app.py  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: test.yml
backend/brain/: llm_router.py  prompts.py  rag_engine.py  stt_engine.py
backend/components/: vector_qdrant.py
backend/config/: settings.py
backend/core/: __init__.py  bootstrap.py  db_interface.py  logger.py  settings.py
backend/database/: db_manager.py
backend/knowledge_base/: __init__.py  pipeline.py  scanner.py
backend/memory/: __init__.py  memory_writer.py
backend/memory/relational/: db_manager.py
backend/memory/vector_store/: base.py  model_loader.py  vector_qdrant.py
backend/observability/: logger.py
backend/obsidian/: injector.py
backend/pipelines/: document_pipeline.py
backend/services/: interview_service.py
config/: settings.py
docs/: Project Reborn (数字分身) - Master Plan & Architecture.md  README.md
docs/adr/: ADR-001-retrieval-generation-atomic-switch.md
docs/eval/: child-safety-persona.v1.json
docs/examples/: project_profile.toml
docs/tasks/: 2026-W28-Sprint2-Soul-Tuning-and-Architecture.md  2026-W29-Sprint3-SourceArtifact-and-Reflection.md  2026-W30-Sprint4-Concurrency-and-Evaluation.md
frontend/: app.py
scripts/: generate_env_example.py  run_sync.py
src/Project_Reborn_System.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/db_ops/: client.py
src/obsidian/: injector.py
src/reborn.egg-info/: PKG-INFO  SOURCES.txt
src/reborn_core/: __main__.py  container.py  lifecycle.py
src/reborn_core/application/: __init__.py  models.py  ports.py
src/reborn_core/application/services/: __init__.py  avatar.py  evaluate.py  identity.py  interview.py  sync.py
src/reborn_core/config/: __init__.py  enums.py  settings.py
src/reborn_core/core/: banner.py  bootstrap.py  config.py  exceptions.py  logger.py
src/reborn_core/domains/: __init__.py  profile.py
src/reborn_core/domains/brain/: __init__.py  age_tone.py  llm_router.py  prompt_registry.py  prompts.py  rag_engine.py  stt_engine.py
src/reborn_core/domains/memory/: __init__.py  memory_writer.py
src/reborn_core/domains/services/: __init__.py  interview_service.py
src/reborn_core/infrastructure/: backup.py
src/reborn_core/infrastructure/brain/: __init__.py  stt_engine.py
src/reborn_core/infrastructure/database/: __init__.py  core.py  migrations.py  repositories.py
src/reborn_core/infrastructure/evaluation/: __init__.py  suite_loader.py
src/reborn_core/infrastructure/knowledge/: __init__.py  frontmatter.py  pipeline.py  scanner.py
src/reborn_core/infrastructure/memory/: __init__.py  context.py  memory_gaps.py  obsidian_writer.py
src/reborn_core/infrastructure/profile/: __init__.py  toml_profile_repository.py
src/reborn_core/infrastructure/prompting/: __init__.py
src/reborn_core/infrastructure/retrieval/: __init__.py  generation.py  lease.py
src/reborn_core/observability/: __init__.py  logger.py
src/reborn_core/runtime/: __init__.py  tasks.py
src/reborn_core/security/: __init__.py  access.py  legacy.py
src/reborn_core/utils/: models.py  parsers.py
src/utils/: logger.py
tests/: conftest.py
tests/integration/: test_vector_db.py
tests/personality/: test_alignment.py
tests/unit/: test_age_routing.py  test_application_services.py  test_architecture_boundaries.py  test_brain_engines.py  test_container_voice.py  test_database.py  test_db_manager.py  test_env_example.py  test_evaluate.py  test_governance_and_runtime.py  test_knowledge.py  test_lifecycle.py  test_markdown_cleaner.py  test_memory_writer.py  test_no_production_asserts.py  test_parser.py  test_project_profile.py  test_prompt_registry.py  test_rag_engine.py  test_retrieval_generations.py  test_streamlit_app.py  test_streamlit_runtime.py
ui/: dashboard.py
utils/: logger.py  models.py  scanner.py
(+22 files in other folders)
