[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Project_Reborn_System"
version = "0.1.0"
description = "Project Reborn - Digital Immortality System"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "cryptography>=42.0.0",
    "loguru>=0.7.2",
    "pydantic-settings>=2.2.1",
    "pyfiglet>=0.8.1",
]

[project.optional-dependencies]
llm = [
    "openai>=1.0.0",
    "tenacity>=8.2.0",
]
rag = [
    "jieba>=0.42.1",
    "langchain-community==0.4.1",
    "langchain-core==1.2.31",
    "langchain-qdrant==1.1.0",
    "langchain-text-splitters==1.1.2",
    "numpy<2.0.0",
    "qdrant-client>=1.8.0",
    "rank-bm25>=0.2.2",
    "sentence-transformers==2.6.1",
    "transformers==4.39.3",
]
ui = [
    "audio-recorder-streamlit>=0.0.10",
    "pandas>=2.0.0",
    "streamlit>=1.32.0",
]
voice = [
    "funasr>=1.0.0",
    "modelscope>=1.0.0",
    "torch==2.2.2",
    "torchaudio==2.2.2",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

[project.scripts]
reborn = "reborn_core.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/reborn_core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
ignore_missing_imports = true
