[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Project_Reborn_System"
version = "0.1.0"
description = "Project Reborn - Digital Immortality System"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "audio-recorder-streamlit>=0.0.10",
    "cryptography>=42.0.0",
    "funasr>=1.0.0",
    "jieba>=0.42.1",
    "langchain-community==0.4.1",
    "langchain-core==1.2.31",
    "langchain-qdrant==1.1.0",
    "langchain-text-splitters==1.1.2",
    "loguru>=0.7.2",
    "modelscope>=1.0.0",
    "numpy<2.0.0",
    "openai>=1.0.0",
    "pandas>=2.0.0",
    "pydantic-settings>=2.2.1",
    "pyfiglet>=0.8.1",
    "PyYAML>=6.0",
    "qdrant-client>=1.8.0",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.3.0; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    "sentence-transformers==2.6.1; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "streamlit>=1.58.0",
    "tenacity>=8.2.0",
    "torch>=2.4; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    "torch==2.2.2; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "torchaudio>=2.2.2; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    "torchaudio==2.2.2; sys_platform == 'darwin' and platform_machine == 'x86_64'",
    "transformers>=4.41.0; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    "transformers==4.39.3; sys_platform == 'darwin' and platform_machine == 'x86_64'",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pre-commit>=3.7.0",
]

[project.scripts]
reborn = "reborn_core.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/reborn_core"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
ignore_missing_imports = true
